Update code based on PR feedback Relates with: #qubIT-Fenix-8848